--- a/my-pay-prod.yaml
+++ b/my-pay-prod.yaml
@@ -5,9 +5,9 @@ demo:
 primary:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.178.0.4:3306/demo?useUnicode=true&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://34.64.196.129:3306/demo1?useUnicode=true&serverTimezone=Asia/Seoul
     user: root
-    password: "root"
+    password: "root01"
     initialization-mode: always
     sql-script-encoding: utf-8
     hibernate:
@@ -18,9 +18,9 @@ primary:
 secondary:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.178.0.4:3306/demo?useUnicode=true&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://34.64.196.129:3306/demo2?useUnicode=true&serverTimezone=Asia/Seoul
     user: root
-    password: "root"
+    password: "root01"
     initialization-mode: always
     sql-script-encoding: utf-8
     hibernate:
