--- a/my-pay-dev.yaml
+++ b/my-pay-dev.yaml
@@ -4,10 +4,10 @@ demo:
   fileupload: .
 primary:
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mariadb://34.64.112.225:3306/petclinic
-    user: root
-    password: "root"
+    user: lena
+    password: "!lena00"
     initialization-mode: always
     sql-script-encoding: utf-8
     hibernate:
@@ -17,10 +17,10 @@ primary:
       maximum-pool-size: 15
 secondary:
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mariadb://34.64.112.225:3306/petclinic2
-    user: root
-    password: "root"
+    user: lena
+    password: "!lena00"
     initialization-mode: always
     sql-script-encoding: utf-8
     hibernate:
