--- a/my-pay-dev.yaml
+++ b/my-pay-dev.yaml
@@ -5,7 +5,7 @@ demo:
 primary:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mariadb://34.64.112.225:3306/petclinic?useSSL=false&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://34.64.112.225:3306/petclinic?useSSL=false&serverTimezone=Asia/Seoul
     user: lena
     password: "!lena00"
     initialization-mode: always
@@ -18,7 +18,7 @@ primary:
 secondary:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mariadb://34.64.112.225:3306/petclinic2?useSSL=false&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://34.64.112.225:3306/petclinic2?useSSL=false&serverTimezone=Asia/Seoul
     user: lena
     password: "!lena00"
     initialization-mode: always
