--- a/my-pay-dev.yaml
+++ b/my-pay-dev.yaml
@@ -5,9 +5,9 @@ demo:
 primary:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.178.0.7:3306/petclinic?useUnicode=true&serverTimezone=Asia/Seoul
-    user: lena
-    password: "!lena00"
+    url: jdbc:mysql://10.178.15.203:3306/petclinic?useUnicode=true&serverTimezone=Asia/Seoul
+    user: root
+    password: "root"
     initialization-mode: always
     sql-script-encoding: utf-8
     hibernate:
@@ -18,9 +18,9 @@ primary:
 secondary:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.178.0.7:3306/petclinic2?useUnicode=true&serverTimezone=Asia/Seoul
-    user: lena
-    password: "!lena00"
+    url: jdbc:mysql://10.178.15.203:3306/petclinic2?useUnicode=true&serverTimezone=Asia/Seoul
+    user: root
+    password: "root"
     initialization-mode: always
     sql-script-encoding: utf-8
     hibernate:
