--- a/my-pay-dev.yaml
+++ b/my-pay-dev.yaml
@@ -5,7 +5,7 @@ demo:
 primary:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.178.15.203:3306/petclinic?useUnicode=true&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://10.178.15.203:3306/petclinic?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     user: root
     password: "root"
     initialization-mode: always
@@ -18,7 +18,7 @@ primary:
 secondary:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.178.15.203:3306/petclinic2?useUnicode=true&serverTimezone=Asia/Seoul
+    url: jdbc:mysql://10.178.15.203:3306/petclinic2?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
     user: root
     password: "root"
     initialization-mode: always
